src/ruff/snapshots/ruff__ruff__tests__RUF004_RUF004.py.snap
---
source: src/ruff/mod.rs
expression: checks
---
- kind:
    KeywordArgumentBeforeStarArgument: kw
  location:
    row: 12
    column: 2
  end_location:
    row: 12
    column: 6
  fix: ~
- kind:
    KeywordArgumentBeforeStarArgument: kw
  location:
    row: 13
    column: 2
  end_location:
    row: 13
    column: 6
  fix: ~

