src/ruff/snapshots/ruff__ruff__tests__confusables.snap
---
source: src/ruff/mod.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterString:
      - 𝐁
      - B
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 6
  fix:
    location:
      row: 1
      column: 5
    end_location:
      row: 1
      column: 6
    content: B
    message: ~
  parent: ~
- kind:
    AmbiguousUnicodeCharacterDocstring:
      - ）
      - )
  location:
    row: 6
    column: 55
  end_location:
    row: 6
    column: 56
  fix:
    location:
      row: 6
      column: 55
    end_location:
      row: 6
      column: 56
    content: )
    message: ~
  parent: ~
- kind:
    AmbiguousUnicodeCharacterComment:
      - ᜵
      - /
  location:
    row: 7
    column: 61
  end_location:
    row: 7
    column: 62
  fix:
    location:
      row: 7
      column: 61
    end_location:
      row: 7
      column: 62
    content: /
    message: ~
  parent: ~

