src/ruff/snapshots/ruff__ruff__tests__ruf100_0.snap
---
source: src/ruff/mod.rs
expression: checks
---
- kind:
    UnusedNOQA: ~
  location:
    row: 9
    column: 11
  end_location:
    row: 9
    column: 17
  fix:
    location:
      row: 9
      column: 9
    end_location:
      row: 9
      column: 17
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - E501
  location:
    row: 13
    column: 11
  end_location:
    row: 13
    column: 23
  fix:
    location:
      row: 13
      column: 9
    end_location:
      row: 13
      column: 23
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - F841
        - E501
  location:
    row: 16
    column: 11
  end_location:
    row: 16
    column: 29
  fix:
    location:
      row: 16
      column: 9
    end_location:
      row: 16
      column: 29
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown:
        - W191
      disabled:
        - F821
      unmatched:
        - F841
  location:
    row: 19
    column: 11
  end_location:
    row: 19
    column: 35
  fix:
    location:
      row: 19
      column: 9
    end_location:
      row: 19
      column: 35
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown:
        - V101
      disabled: []
      unmatched:
        - F841
  location:
    row: 22
    column: 11
  end_location:
    row: 22
    column: 29
  fix:
    location:
      row: 22
      column: 9
    end_location:
      row: 22
      column: 29
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - E501
  location:
    row: 26
    column: 9
  end_location:
    row: 26
    column: 21
  fix:
    location:
      row: 26
      column: 9
    end_location:
      row: 26
      column: 21
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedVariable: d
  location:
    row: 29
    column: 4
  end_location:
    row: 29
    column: 5
  fix: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - E501
  location:
    row: 29
    column: 32
  end_location:
    row: 29
    column: 44
  fix:
    location:
      row: 29
      column: 9
    end_location:
      row: 29
      column: 44
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - F841
  location:
    row: 55
    column: 5
  end_location:
    row: 55
    column: 23
  fix:
    location:
      row: 55
      column: 5
    end_location:
      row: 55
      column: 23
    content: "# noqa: E501"
    message: ~
  parent: ~
- kind:
    UnusedNOQA:
      unknown: []
      disabled: []
      unmatched:
        - E501
  location:
    row: 63
    column: 5
  end_location:
    row: 63
    column: 17
  fix:
    location:
      row: 63
      column: 3
    end_location:
      row: 63
      column: 17
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedNOQA: ~
  location:
    row: 71
    column: 5
  end_location:
    row: 71
    column: 11
  fix:
    location:
      row: 71
      column: 3
    end_location:
      row: 71
      column: 11
    content: ""
    message: ~
  parent: ~
- kind:
    UnusedImport:
      - shelve
      - false
  location:
    row: 85
    column: 7
  end_location:
    row: 85
    column: 13
  fix:
    location:
      row: 85
      column: 0
    end_location:
      row: 86
      column: 0
    content: ""
    message: ~
  parent: ~

